5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1798_2568.log
== TEST (2019-06-10 14:35:47) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j 8 "o" + i * "*")
	
-- ERROR:
File "XXXX", line 5
    print(i * "*" + j 8 "o" + i * "*")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:59) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j 8 "o" + i * "*")
	
-- ERROR:
File "XXXX", line 5
    print(i * "*" + j 8 "o" + i * "*")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:17) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1)):
	print(i * "*" + j 8 "o" + i * "*")
	
-- ERROR:
File "XXXX", line 4
    for i in range((n-1),0,-1)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:55) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j 8 "O" + i * "*")
	
-- ERROR:
File "XXXX", line 5
    print(i * "*" + j 8 "O" + i * "*")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:37:13) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j 8 "O" + i * "*")
	j = j + 2
	
	
-- ERROR:
File "XXXX", line 5
    print(i * "*" + j 8 "O" + i * "*")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:37:19) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "O" + i * "*")
	j = j + 2
	
	
-- OUTPUT:
**********************
**********OO**********
*********OOOO*********
********OOOOOO********
*******OOOOOOOO*******
******OOOOOOOOOO******
*****OOOOOOOOOOOO*****
****OOOOOOOOOOOOOO****
***OOOOOOOOOOOOOOOO***
**OOOOOOOOOOOOOOOOOO**
*OOOOOOOOOOOOOOOOOOOO*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:37:26) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "O" + i * "*")
	j = j + 2
	
	
-- EXECUTION TIME:
0.759648
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********OO**********
*********OOOO*********
********OOOOOO********
*******OOOOOOOO*******
******OOOOOOOOOO******
*****OOOOOOOOOOOO*****
****OOOOOOOOOOOOOO****
***OOOOOOOOOOOOOOOO***
**OOOOOOOOOOOOOOOOOO**
*OOOOOOOOOOOOOOOOOOOO*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************OO******************
*****************OOOO*****************
****************OOOOOO****************
***************OOOOOOOO***************
**************OOOOOOOOOO**************
*************OOOOOOOOOOOO*************
************OOOOOOOOOOOOOO************
***********OOOOOOOOOOOOOOOO***********
**********OOOOOOOOOOOOOOOOOO**********
*********OOOOOOOOOOOOOOOOOOOO*********
********OOOOOOOOOOOOOOOOOOOOOO********
*******OOOOOOOOOOOOOOOOOOOOOOOO*******
******OOOOOOOOOOOOOOOOOOOOOOOOOO******
*****OOOOOOOOOOOOOOOOOOOOOOOOOOOO*****
****OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO****
***OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO***
**OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO**
*OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************OO*************************
************************OOOO************************
***********************OOOOOO***********************
**********************OOOOOOOO**********************
*********************OOOOOOOOOO*********************
********************OOOOOOOOOOOO********************
*******************OOOOOOOOOOOOOO*******************
******************OOOOOOOOOOOOOOOO******************
*****************OOOOOOOOOOOOOOOOOO*****************
****************OOOOOOOOOOOOOOOOOOOO****************
***************OOOOOOOOOOOOOOOOOOOOOO***************
**************OOOOOOOOOOOOOOOOOOOOOOOO**************
*************OOOOOOOOOOOOOOOOOOOOOOOOOO*************
************OOOOOOOOOOOOOOOOOOOOOOOOOOOO************
***********OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO***********
**********OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO**********
*********OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO*********
********OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO**
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:37:51) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "o" + i * "*")
	j = j + 2
	
	
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:37:56) 
-- CODE:
n = int(input("n:"))
j = 2
print((n*2) * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "o" + i * "*")
	j = j + 2
	
	
-- EXECUTION TIME:
0.803761
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
